--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8",
-        "symfony/console": "^5.2@beta"
+        "symfony/console": "^5.2"
     },
     "autoload": {
         "psr-4": {
